feat: use query operation
